fix dropdown menu vs stick-top z-index conflict

--- a/app/assets/stylesheets/tylium/base.scss
+++ b/app/assets/stylesheets/tylium/base.scss
@@ -144,6 +144,7 @@ mark {
   position: sticky !important;
   top: $mainContentMargin;
   margin-bottom: $mainContentMargin;
+  z-index: 2;
 }
 
 .table td {
