--- a/app/assets/stylesheets/tylium/modules/_dropdown.scss
+++ b/app/assets/stylesheets/tylium/modules/_dropdown.scss
@@ -5,7 +5,7 @@
     position: absolute;
     margin: 0;
     border: 1px solid $borderColor;
-    z-index: 2;
+    z-index: 3;
     padding: .25rem 0;
     font-size: 0.9rem;
     box-shadow: 0 20px 30px 0 rgba(33,55,74,0.2);
